Fix bug introduced to Bootstrap template in previous fix - remove duplicate of skip link from top of page and moved it to 'alwaysTop' element to ensure it is always off screen when not in focus - even if navigation bar is below the header bar

--- a/modules/site/parent_templates/site/common/css/custom.css
+++ b/modules/site/parent_templates/site/common/css/custom.css
@@ -77,6 +77,7 @@ footer {
 }
 
 #skipLink {
+    z-index: 1000;
     background: #000000;
     color: #ffffff;
     font-weight: 700;
